# MACHINE-LEARNING-PROJECTS

./: .gitignore  Readme.md
Crop and fertilizer Recomendation/: Readme.md  metrics_evaluation.py
Helthcare-app/: .gitignore  Readme.md  benchmark.py  pyproject.toml  setup.py
Helthcare-app/src/: functions.py
LINEAR_REGRESSION_FROM_SCRATCH/: Readme.md
Recommendation-app/: README.md  benchmark.py
Recommendation-app/src/data/: load_data.py
Recommendation-app/src/models/: recommender.py
Sentiment Analysis /: .gitignore  README.md  main.py  pixi.toml
Sentiment Analysis /notebooks/: model.ipynb
Sentiment Analysis /ui/: app.py
shrinkify/: db.sqlite3  manage.py
shrinkify/compressor/: urls.py  views.py
shrinkify/shrinkify/: asgi.py  settings.py  urls.py  wsgi.py
shrinkify/static/: test.txt
shrinkify/static/css/: index.css
shrinkify/static/js/: script.js
shrinkify/template/: index.html
